--- a/app/src/main/res/layout/activity_work_of_art_detail.xml
+++ b/app/src/main/res/layout/activity_work_of_art_detail.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_gradient"
-    tools:context="edu.iesam.superheroes.features.presentation.SuperHeroDetailActivity">
+    tools:context="edu.iesam.metropolitan_museum.features.museum.presentation.WorkOfArtDetailActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,15 +13,15 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/heroImage"
+            android:id="@+id/primaryImage"
             android:layout_width="match_parent"
             android:layout_height="350dp"
             android:scaleType="centerCrop"
             tools:src="@tools:sample/backgrounds/scenic"
-            android:contentDescription="@string/hero_image_desc" />
+            android:contentDescription="@string/WorkOfArt_image_desc" />
 
         <TextView
-            android:id="@+id/heroName"
+            android:id="@+id/objectID"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -31,17 +30,67 @@
             android:textColor="@color/electric_gold"
             android:textSize="28sp"
             android:textStyle="bold"
-            tools:text="Superhero Name" />
+            tools:text="Work of art name: " />
 
         <TextView
-            android:id="@+id/heroSlug"
+            android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:gravity="center"
             android:textColor="@color/subtle_silver"
             android:textSize="16sp"
-            tools:text="superhero-slug" />
+            tools:text="Work of art title: " />
+
+        <TextView
+            android:id="@+id/artistDisplayName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:textColor="@color/subtle_silver"
+            android:textSize="16sp"
+            tools:text="artist display name: " />
+
+        <TextView
+            android:id="@+id/artistNationality"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:textColor="@color/subtle_silver"
+            android:textSize="16sp"
+            tools:text="artist nationality: " />
+
+        <TextView
+            android:id="@+id/objectDate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:textColor="@color/subtle_silver"
+            android:textSize="16sp"
+            tools:text="object date: " />
+
+        <TextView
+            android:id="@+id/medium"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:textColor="@color/subtle_silver"
+            android:textSize="16sp"
+            tools:text="medium: " />
+
+        <TextView
+            android:id="@+id/dimensions"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:textColor="@color/subtle_silver"
+            android:textSize="16sp"
+            tools:text="dimensions: " />
 
     </LinearLayout>
 
