--- a/app/src/main/res/layout/recycleview_row.xml
+++ b/app/src/main/res/layout/recycleview_row.xml
@@ -7,7 +7,7 @@
     android:padding="10dp">
 
     <TextView
-        android:id="@+id/SuperHeroName"
+        android:id="@+id/workOfArtName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"/>
