--- a/app/src/main/res/layout/item_hero_card.xml
+++ b/app/src/main/res/layout/item_hero_card.xml
@@ -6,18 +6,18 @@
     android:layout_height="wrap_content"
     app:cardCornerRadius="@dimen/card_corner_radius"
     app:cardElevation="@dimen/card_elevation"
-    android:background="@drawable/hero_card_background">
+    android:background="@drawable/workOfArt_card_background">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/heroImage"
+            android:id="@+id/workOfArt"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:scaleType="centerCrop"
-            android:contentDescription="@string/hero_image_desc" />
+            android:contentDescription="@string/workOfArt_image_desc" />
 
         <ImageButton
             android:id="@+id/favoriteButton"
@@ -30,12 +30,12 @@
             android:contentDescription="@string/favorite_button_desc" />
 
         <TextView
-            android:id="@+id/heroName"
+            android:id="@+id/workOfArName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:padding="@dimen/spacing_small"
-            android:text="Hero Name"
+            android:text="Work Of Art name"
             android:textSize="@dimen/text_size_medium"
             android:textColor="@color/electric_gold"
             android:textStyle="bold"
