Commit: 1.Fix names activity 2.Updated item_card names.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,8 +60,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:scaleType="centerInside"
-                        android:src="@drawable/banner_heroes"
-                        android:contentDescription="@string/banner_image_desc" />
+                        android:src="@drawable/banner_work_of_art_background"
+                        android:contentDescription="@string/workOfArt_image_desc" />
 
                     <View
                         android:layout_width="match_parent"
